// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ProjectFAB component Project FAB should match snapshot with options not showing 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "transparent",
          "borderRadius": "50%",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "margin": "5px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        }
      }
    >
      <button
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "var(--accent-color-dark)",
            "border": 10,
            "borderRadius": "50%",
            "boxSizing": "border-box",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 56,
            "margin": 0,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "verticalAlign": "bottom",
            "width": 56,
          }
        }
        tabIndex={0}
        type="button"
      >
        <div
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            style={
              Object {
                "muiPrepared": true,
                "top": 0,
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              }
            }
          >
            <span
              className="glyphicon glyphicon-menu-hamburger"
              style={
                Object {
                  "color": "var(--reverse-color)",
                  "fill": "#ffffff",
                  "fontSize": "26px",
                  "height": 56,
                  "lineHeight": "56px",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Test ProjectFAB component Project FAB should match snapshot with options showing 1`] = `
<div>
  <div>
    <div>
      <div
        className=""
        style={
          Object {
            "border": "10px solid #ddd",
            "borderRadius": "50%",
            "boxSizing": "content-box",
            "height": 0,
            "left": -10,
            "position": "fixed",
            "top": -10,
            "transform": "translate(0px, 0px)",
            "transitionDuration": "1000ms",
            "transitionProperty": "all",
            "width": 0,
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "border": "1280px solid white",
              "borderRadius": "50%",
              "boxSizing": "content-box",
              "height": 20,
              "left": "50%",
              "opacity": 0.9,
              "position": "absolute",
              "top": "50%",
              "transform": "translate(-50%, -50%)",
              "transitionDuration": "1000ms",
              "transitionProperty": "all",
              "width": 20,
            }
          }
        />
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "cursor": "pointer",
              "display": "flex",
              "fontFamily": "Roboto, sans-serif",
              "height": "40px",
              "justifyContent": "center",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "width": "200px",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "padding": "0px",
                "paddingBottom": 8,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "muiPrepared": true,
                  "padding": "0px",
                }
              }
            >
              projects.import_local_project
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "transparent",
            "borderRadius": "50%",
            "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "margin": "5px",
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "var(--accent-color-dark)",
              "border": 10,
              "borderRadius": "50%",
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 56,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": "bottom",
              "width": 56,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                className="glyphicon glyphicon-folder-open"
                style={
                  Object {
                    "color": "#ffffff",
                    "fill": "#ffffff",
                    "fontSize": "26px",
                    "height": 56,
                    "lineHeight": "56px",
                  }
                }
              />
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "cursor": "pointer",
              "display": "flex",
              "fontFamily": "Roboto, sans-serif",
              "height": "40px",
              "justifyContent": "center",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "width": "200px",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "padding": "0px",
                "paddingBottom": 8,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "muiPrepared": true,
                  "padding": "0px",
                }
              }
            >
              projects.import_online_project
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "transparent",
            "borderRadius": "50%",
            "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "margin": "5px",
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "var(--accent-color-dark)",
              "border": 10,
              "borderRadius": "50%",
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 56,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": "bottom",
              "width": 56,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                className="glyphicon glyphicon-cloud-download"
                style={
                  Object {
                    "color": "#ffffff",
                    "fill": "#ffffff",
                    "fontSize": "26px",
                    "height": 56,
                    "lineHeight": "56px",
                  }
                }
              />
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "cursor": "pointer",
              "display": "flex",
              "fontFamily": "Roboto, sans-serif",
              "height": "40px",
              "justifyContent": "center",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "width": "200px",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "padding": "0px",
                "paddingBottom": 8,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "muiPrepared": true,
                  "padding": "0px",
                }
              }
            >
              buttons.close_button
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "transparent",
            "borderRadius": "50%",
            "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "margin": "5px",
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "var(--reverse-color)",
              "border": 10,
              "borderRadius": "50%",
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 56,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": "bottom",
              "width": 56,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                className="glyphicon glyphicon-remove"
                style={
                  Object {
                    "color": "var(--accent-color-dark)",
                    "fill": "#ffffff",
                    "fontSize": "26px",
                    "height": 56,
                    "lineHeight": "56px",
                  }
                }
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
